# gtk3shot

./: CMakeLists.txt  gtk3shot-select.c  gtk3shot-select.h  gtk3shot.c  gtk3shot.h  gtk3shotwin.c  gtk3shotwin.h  main.c
